# grpc_project

./: .gitignore
cpu_moniter/: CMakeLists.txt  cpu_moniter_client.cc  cpu_moniter_server.cc
file/: test.txt
log_data/: 23.2.14.client.INFO.txt
memory_moniter/: CMakeLists.txt  memory_moniter_client.cc  memory_moniter_server.cc
moniter_api/: CMakeLists.txt  client.cc  client_main.cc  memory_moniter_client.cc  memory_moniter_server.cc  server.cc  server_main.cc
moniter_api/include/: client_UI.h  cpu_client.h  disk_client.h  memory_client.h  memory_moniter_client.h  memory_moniter_server.h  moniter_client.h  moniter_server.h  process_client.h  save_log.h  service_log_client.h  set_log_dir.h
moniter_api/src/: CMakeLists.txt  client.cc  memory_client.cc  server.cc
moniter_api/src/UI/: client_UI.cc
moniter_api/src/cpu/: CMakeLists.txt  cpu_client.cc  cpu_server.cc
moniter_api/src/disk/: CMakeLists.txt  disk_client.cc  disk_server.cc
moniter_api/src/log/: log_client.cc  log_delete.cc  log_delete_client.cc  log_delete_server.cc  log_read_client.cc  log_read_server.cc  log_server.cc  log_write_client.cc  read_log.cc  save_log.cc  service_log_client.cc  service_log_server.cc  set_log_dir.cc
moniter_api/src/memory/: CMakeLists.txt  memory_client.cc  memory_server.cc
moniter_api/src/process/: CMakeLists.txt  all_process_client.cc  all_process_server.cc  selected_process_client.cc  selected_process_server.cc
protos/: cpu.proto  moniter.proto
